# duckling

./: .gitignore  README.md  pyproject.toml
duckling/: base.py  config.py  config.yaml  convert.py  options.py  utilities.py
process_docs/: base.py  convert.py
tests/: README.md  pytest.ini  run_tests.py  test_advanced.py  test_document_processors.py  test_integration.py  test_simple.py
