[project]
name = "process-docs"
version = "0.1.0"
description = "Process different document formats using Docling + Custom pipelines"
authors = [
    { name = "Paolo Litta", email = "plitta@brembanarolle.com" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
docling = ">=2.57.0,<3.0.0"
langchain = ">=0.3.27,<0.4.0"
langchain-openai = ">=0.3.35,<0.4.0"
torch = ">=2.5.1,<3.0.0"
torchvision = ">=0.20.1,<1.0.0"
torchaudio = ">=2.5.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"