[tool.poetry]
name = "duckling"
version = "0.1.0"
description = "Process different document formats using Docling + Custom pipelines"
authors = ["Paolo Litta <plitta@brembanarolle.com>"]
readme = "README.md"
packages = [{ include = "duckling" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

torch = { version = "==2.8.0", source = "pytorch" }
torchvision = { version = "==0.23.0", source = "pytorch" }
torchaudio = { version = "==2.8.0", source = "pytorch" }

docling = ">=2.57.0,<3.0.0"
langchain = ">=0.3.27,<0.4.0"
langchain-openai = ">=0.3.35,<0.4.0"
pymupdf = "^1.26.5"
easyocr = "^1.7.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "interrogate (>=1.7.0,<2.0.0)"
]
